2009-10-28  Kai Tietz  <kai.tietz@onevision.com>

	* emultempl/pep.em (U): Define underscore macro.
	(init): Use for __ImageBase U macro.

2009-10-23  Kai Tietz  <kai.tietz@onevision.com>

	* deffile.h (def_file_export): New member its_name.
	(def_file_import): Likewise.
	(def_file_add_export): Add argument its_name.
	(def_file_add_import): Likewise.
	* deffilep.y (def_exports): Add argument its_name.
	(def_import): Likewise.
	(EQUAL): Add new token for '=='.
	(opt_equalequal_name): New rule.
	(expline): Add rule opt_equalequal_name.
	(impline): Likewise.
	(def_file_free): Free for exports and imports
	the optional member its_name.
	(def_lex): Add scan of '==' as EQUAL.
	* pe-dll.c (pe_export_sort): Sort for its_name too.
	(process_def_file_and_drectve): Adjust calls to
	def_file_add_export.
	(generate_edata): Take its_name in account.
	(make_one): Likewise.
	(pe_process_import_defs): Likewise.
	(pe_dll_generate_def_file): Add print of new '==' option.
	* ld.texinfo: Extend documentation about .def file syntax.
	* NEWS: Mention new feature.

2009-10-23  Kai Tietz  <kai.tietz@onevision.com>

	* deffilep.y (def_lex): Allow '<' and '>' characters in identifier
	strings.

2009-10-23  Ryan Mansfield  <rmansfield@qnx.com>

	PR ld/10489
	* emultempl/elf32.em (gld${EMULATION_NAME}_search_needed): Handle
	drive specifiers for DOS based filesystems in rpath-link strings.

2009-10-19  Nick Clifton  <nickc@redhat.com>

	* Makefile.am: Remove spurious sanitization marker.
	* Makefile.in: Regenerate.

2009-10-16  Dimitry Gorbachev  <d.g.gorbachev@gmail.com>

	* emultempl/pe.em (OPTION_EXCLUDE_ALL_SYMBOLS): New macro.
	(gld${EMULATION_NAME}_add_options): Add new --exclude-all-symbols option
	to exclude all symbols from automatic export.
	(gld_${EMULATION_NAME}_list_options): Describe it.
	(gld${EMULATION_NAME}_handle_option): Handle it.
	* emultempl/pep.em: Likewise to all the above.
	* pe-dll.c (pe_dll_exclude_all_symbols): New variable.
	(process_def_file_and_drectve): Use it.